# nbm-to-zarr

./: .gitignore  LICENSE  README.md  RUNNING_THE_BACKFILL.md  nbm-zarr-plan.md  pyproject.toml
.github/workflows/: update-data.yml
catalog/: catalog.json  index.html
data/noaa-nbm-conus-analysis-sample.zarr/: .zattrs  .zmetadata
data/noaa-nbm-conus-analysis-sample.zarr/latitude/: .zarray  .zattrs  0.0  0.1  0.2  0.3  1.0  1.1  1.2  1.3  2.0  2.1  2.2  2.3  3.0  3.1  3.2  3.3  4.0  4.1  4.2  4.3  5.0  5.1  5.2  5.3  6.0  6.1  6.2  6.3  7.0  7.1  7.2  7.3
data/noaa-nbm-conus-analysis-sample.zarr/longitude/: .zarray  .zattrs  0.0  0.1  0.2  0.3  1.0  1.1  1.2  1.3  2.0  2.1  2.2  2.3  3.0  3.1  3.2  3.3  4.0  4.1  4.2  4.3  5.0  5.1  5.2  5.3  6.0  6.1  6.2  6.3  7.0  7.1  7.2  7.3
data/noaa-nbm-conus-analysis-sample.zarr/precip/: .zattrs  0.0.0  0.0.1  0.0.2  0.0.3  0.0.4  0.1.0  0.1.1  0.1.2  0.1.3  0.1.4  0.2.0  0.2.1  0.2.2  0.2.3  0.2.4  0.3.0  0.3.1  0.3.2  0.3.3  0.3.4  1.0.0  1.0.1  1.0.2  1.0.3  1.0.4  1.1.0  1.1.1  1.1.2  1.1.3  1.1.4  1.2.0  1.2.1  1.2.2  1.2.3  1.2.4  1.3.0  1.3.1  1.3.2  1.3.3  (+101 more)
data/noaa-nbm-conus-analysis-sample.zarr/spatial_ref/: .zattrs
data/noaa-nbm-conus-analysis-sample.zarr/srad/: .zattrs  0.0.0  0.0.1  0.0.2  0.0.3  0.0.4  0.1.0  0.1.1  0.1.2  0.1.3  0.1.4  0.2.0  0.2.1  0.2.2  0.2.3  0.2.4  0.3.0  0.3.1  (+123 more)
scripts/: backfill_to_hf.py  build_forecast.py  build_sample_analysis.py  generate_catalog.py  upload_hf.py
src/nbm_to_zarr/: __init__.py  __main__.py
tests/: test_grid.py  test_template_config.py  test_variables.py
(+449 files in other folders)
