[project]
name = "nbm-to-zarr"
version = "0.1.0"
description = "Reformat NOAA NBM (National Blend of Models) forecast and historical analysis into Zarr, following dynamical.org architecture patterns"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "xarray>=2024.1.0",
    "zarr>=3.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "cfgrib>=0.9.10",
    "eccodes>=2.30.0",
    "pyproj>=3.6.0",
    "pydantic>=2.6.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "numcodecs>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nbm_to_zarr"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["PLR2004", "PLR0913"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["cfgrib.*", "eccodes.*", "numcodecs.*", "pyproj.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[project.scripts]
nbm = "nbm_to_zarr.__main__:app"
